Fix sonar build (#372)
Co-authored-by: kaklakariada <kaklakariada@users.noreply.github.com>